--- a/cloud/public/index.html
+++ b/cloud/public/index.html
@@ -94,7 +94,7 @@
 <body>
   <div id="logo"></div>
   <div id="files"></div>
-  <a href="#" id="write">Save Changes</a>
+  <a href="#" id="write">Save Files</a>
   <div id="msg">Tap you NFC chip to complete</div>
 </body>
 
