--- a/spotify/index.html
+++ b/spotify/index.html
@@ -42,6 +42,7 @@
 	<link rel="stylesheet" href="syncpad.css">
 </head>
 <body>
+  <div id="logo"></div>
 	<a href="#" class="button" id="write">Write tag</a>
 	<div id="test">yo</div>
 </body>
